# Takamul_ONA

./: .gitignore  README.md
ONA_HARD/: BOM.xlsx  Controller.kicad_sch  Flow Sensor.kicad_sch  ModBus.kicad_sch  ONA-B_Cu.gbr  ONA-B_Mask.gbr  ONA-B_Paste.gbr  ONA-B_Silkscreen.gbr  ONA-Edge_Cuts.gbr  ONA-F_Cu.gbr  ONA-F_Mask.gbr  ONA-F_Paste.gbr  ONA-F_Silkscreen.gbr  ONA-In1_Cu.gbr  ONA-In2_Cu.gbr  ONA-NPTH.drl  ONA-PTH.drl  ONA-job.gbrjob  ONA.csv  ONA.kicad_pcb  ONA.kicad_prl  ONA.kicad_pro  ONA.kicad_sch  ONA.xlsx  PUMP.kicad_sch  Power.kicad_sch  Pressure Sensor.kicad_sch  Prrogramming.kicad_sch  STM32 & ESP32.kicad_pcb  STM32 & ESP32.kicad_prl  STM32 & ESP32.kicad_pro  STM32 & ESP32.kicad_sch  TDS.kicad_sch  fp-info-cache  ~ONA.kicad_pcb.lck
ONA_HARD/v2/ONA/: ONA.kicad_pcb  ONA.kicad_prl  ONA.kicad_pro  ONA.kicad_sch  esp32.kicad_sch  peripherals.kicad_sch  power.kicad_sch  stm32.kicad_sch
ONA_Software/historical_data/: sensors_data.csv
ONA_Software/main/: CMakeLists.txt  main.cpp  main.h
ONA_Software/main/inc/: MqttManager.h
ONA_Software/main/src/: NVSManager.cpp
ONA_Software/main_esp32/main/: Kconfig.projbuild  main.cpp  main.h
ONA_Software/modbus_mapping_controll/: .project  modbus_mapping_controll Debug.launch
ONA_Software/modbus_mapping_controll/Debug/: makefile  modbus_mapping_controll.elf  modbus_mapping_controll.map
ONA_Software/modbus_simulator/: sdkconfig
ONA_Software/modbus_simulator/main/: CMakeLists.txt  P300.cpp  idf_component.yml  main.cpp  modbus_slave.cpp  modbus_slave.hpp
ONA_Software/modbus_v2/: modbus_v2 Debug.launch  modbus_v2.ioc
ONA_Software/modbus_v2/Debug/: modbus_v2.elf  modbus_v2.list  modbus_v2.map  objects.list
ONA_Software/software_v1/esp32s3_project/: CMakeLists.txt  sdkconfig  sdkconfig.old
ONA_Software/stm32_master/: .cproject  .mxproject  First.ioc
ONA_Software/test_db/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  temp.txt
ONA_Software/tests/main_esp32/main/: CMakeLists.txt  main.cpp
ONA_Software/tests/main_esp32/main/inc/: Sleepmanager.h  SupabaseClient.h
ONA_Software/tests/main_esp32/main/src/: TelemetryManager.cpp  WifiManager.cpp
ONA_Software/v1/: CMakeLists.txt
ONA_Software/v1/main/: CMakeLists.txt  main.h
ONA_Software/v1/main/inc/: TelemetryManager.h  WebServer.h
ONA_Software/v1/main/src/: MqttManager.cpp  TelemetryManager.cpp  WebServer.cpp
ONA_Software/v2/slave_modbus/main/: CMakeLists.txt  main.cpp  modbus_slave.cpp  modbus_slave.h
mechanical/V1/STL/: Body.STL  (+2 more)
mechanical/cad_v2/: antenna.stl  assembly.stl  base.stl  din_clip.stl  front_lid.stl  pcb_main.stl  screw_m3x8.stl  standoff.stl  top_lid.stl
mechanical/docs/: bom_v2.csv
(+228 files in other folders)
