idf_component_register(
    SRCS 
        "main.cpp"
        "src/NVSManager.cpp"
        "src/WifiManager.cpp"
        "src/MqttManager.cpp"
    INCLUDE_DIRS 
        "."
        "inc"
    REQUIRES 
        esp_driver_gpio
        freertos
        esp_driver_i2c
        esp_adc
        esp_wifi
        mqtt
        esp_http_client
        esp_http_server
        esp_event
        lwip
        nvs_flash
        nvs_sec_provider    
        esp_common
)